--- a/hunter.css
+++ b/hunter.css
@@ -8,20 +8,6 @@ body {
   }
 
 
-
-
-
-
-  .part1 {
-    overflow: hidden;
-  }
-  .item－box {
-    float: left;
-    width: 200px;
-    height: 100px;
-  }
-
-  
   .main {
     width: 960px;
     height: auto;
@@ -32,7 +18,7 @@ body {
     
 
   .main-title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
   
     color: #990000;
@@ -40,7 +26,8 @@ body {
     width: 100%;
   
     text-align: center;
-  
+   
+    margin-top: 80px;
     margin-bottom: 50px;
     letter-spacing: 2px;
   }
@@ -53,11 +40,27 @@ body {
     font-weight: bold;
     letter-spacing: 1px;
 
-    width: 100%;
     margin-bottom: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
 
     border-bottom: 1px solid #990000;
   }
+
+  .space {
+    height:80px;
+
+  }
+
+  .part1 {
+    overflow: hidden;
+    margin-left: 50px;
+    margin-right: 50px;
+  
+    height:200px;
+  }
+
+
 
   .item-box {
     -webkit-box-sizing: border-box;
@@ -66,8 +69,11 @@ body {
     background-color: #F0F0F0;
     padding: 5px;
 
+    float: left;
     position: relative;
-
+    top: 0;
+    width: 25%;
+    height: 100%;
     overflow: hidden;
   }
 
@@ -80,8 +86,17 @@ body {
     cursor: pointer;
   }
 
+  .item-img {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 
-  .item-box .item-des {
+  }
+  
+  
+  .item-des {
     position: absolute;
     top: 0;
     width: 100%;
@@ -103,16 +118,18 @@ body {
 
   .item-box .item-des .item-des-span {
     color: #333333;
-    font-size: 18px;
+    font-size: 15px;
 
     display: block;
     width: 100%;
-    height: 18px;
+    height: 100%;
     text-align: left;
 
     position: relative;
     top: 10%;
     margin-top: -9px;
+    margin-left: 10px;
+    margin-right: 10px;
 
     letter-spacing: 2px;
   }
