--- a/hunter.css
+++ b/hunter.css
@@ -7,6 +7,7 @@ body {
     -webkit-font-smoothing: antialiased;
   }
 
+  h3 { text-decoration:underline }
 
   .main {
     width: 960px;
@@ -16,6 +17,30 @@ body {
     margin-top: 50px;
   }
     
+  .menuIcon{
+    margin-left: 50px;
+    margin-top: 50px;
+
+    height:50px;
+    width:50px;
+    
+  }
+
+  #menu { 
+    font:18px verdana, arial, sans-serif; /* 设置文字大小和字体样式 */
+    float: left;
+    }
+
+  #menu li { 
+    float:left; /* 往左浮动 */
+    }
+
+  #menu li a {
+        display:block; /* 将链接设为块级元素 */
+        padding:2px 30px; /* 设置内边距 */
+        color:#333333; /* 设置文字颜色 */
+        }
+
 
   .main-title {
     font-size: 30px;
@@ -45,17 +70,23 @@ body {
     margin-right: 50px;
 
     border-bottom: 1px solid #990000;
+    width:1160px;
   }
 
   .space {
     height:80px;
+  }
 
+  .space-1 {
+    margin-top:25%;
+    height:40px;
   }
 
   .part1 {
     overflow: hidden;
     margin-left: 50px;
     margin-right: 50px;
+    width:1160px;
   
     height:200px;
   }
@@ -63,8 +94,6 @@ body {
 
 
   .item-box {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
     background-color: #F0F0F0;
     padding: 5px;
@@ -87,11 +116,8 @@ body {
   }
 
   .item-img {
-    position: relative;
-    top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 
   }
   
@@ -123,13 +149,71 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    text-align: left;
+    text-align: center;
+    letter-spacing: 2px;
 
     position: relative;
-    top: 10%;
+    top: 50%;
     margin-top: -9px;
-    margin-left: 10px;
-    margin-right: 10px;
-
-    letter-spacing: 2px;
+    
+    
   }
+
+
+  .part2 {
+    overflow: hidden;
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 1160px;
+  }
+
+  .author {
+    display: block;
+    padding:5px;
+
+    float: left;
+    position: relative;
+    top: 0;
+    width: 160px;
+    height: 160px;
+    overflow: hidden;
+  }
+
+.author-work {
+  float: left;
+
+}
+
+.author-des-box {
+  float: left;
+  width: 980px;
+  padding:5px
+  }
+
+.author-des {
+    color: #333333;
+    font-size: 15px;
+    text-align: justify;
+    line-height: 120%;
+    margin-top:-4px;
+  }
+
+
+
+
+
+footer {
+  text-align:center;
+  color: #333333;
+}
+
+
+
+  strong, b {
+    font-weight: bold;
+}
+
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
