--- a/hunter.css
+++ b/hunter.css
@@ -74,7 +74,7 @@ body {
   }
 
   .space {
-    height:80px;
+    height:50px;
   }
 
   .space-1 {
@@ -198,6 +198,20 @@ body {
     margin-top:-4px;
   }
 
+#story {
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 1160px;
+  height:300px;
+}
+
+#contact{
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 1160px;
+  height:300px;
+
+}
 
 
 
